Finish auth process

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,9 @@
 
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:noHistory="true"
+            android:autoRemoveFromRecents="true"
+            android:label="@string/title_activity_login"/>
     </application>
 
 </manifest>
