--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-base:9.2.1'
     compile 'com.google.android.gms:play-services-location:9.2.1'
 
+    compile 'com.jaredrummler:android-device-names:1.0.9'
+
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 repositories {
