--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:description="@string/action_sign_out"
         android:theme="@style/AppTheme">
         <activity
             android:name=".activities.MainActivity"
@@ -41,7 +42,7 @@
         </service>
 
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:noHistory="true"
             android:autoRemoveFromRecents="true"
             android:label="@string/title_activity_login"/>
