--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.1.0'
-    compile 'com.android.support:design:24.1.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
 
     compile 'com.scottyab:secure-preferences-lib:0.1.4'
     compile 'com.github.yknx4:YknxLibrary:0.11'
@@ -38,6 +38,7 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.elmargomez.typer:typerlib:1.0.0'
 
     compile 'com.google.android.gms:play-services-base:9.2.1'
     compile 'com.google.android.gms:play-services-location:9.2.1'
